# Flitz

./: .clinerules  .gitignore  .mcp.json  CHECKPOINT_CHANGESET_250808.md  CLAUDE.md  Package.resolved  Package.swift  README.md  i18n_subagent_plan.md
Flitz.xcworkspace/: contents.xcworkspacedata
FlitzCardEditorTest/FlitzCardEditorTest/: CardCanvas.swift  CardEditor.swift  Color+NormalMapHeight.swift  ContentView.swift  DraggableView.swift  FlitzCardEditorTestApp.swift  FlitzCardView.swift  card_base_3_tmp.usdz  rad2deg.swift
FlitzCardEditorTest/FlitzCardEditorTest.xcodeproj/: project.pbxproj
FlitzCardExchangeTest/FlitzCardExchangeTest/: BeaconCommunicator.swift  ContentView.swift  FlitzCardExchangeTestApp.swift  Info.plist
FlitzCardExchangeTest/FlitzCardExchangeTest.xcodeproj/: project.pbxproj
FlitzCardTest/FlitzCardTest/: ContentView.swift  FlitzCardTestApp.swift  FlitzCardView.swift  card_base_1.usdz
FlitzCardTest/FlitzCardTest.xcodeproj/: project.pbxproj
flitz/Flitz.xcodeproj/: project.pbxproj
flitz/FlitzNotificationService/: NotificationService.swift
flitz/ci_scripts/: ci_post_clone.sh
flitz/flitz/: AppDelegate+UNUserNotificationCenterDelegate.swift  AppDelegate.swift  BinaryFloatingPoint+clamp.swift  CGSize+scaleInto.swift  CountryCode.swift  Date+LocaleString.swift  Date+RelativeTime.swift  Flitz+Meta.swift  Flitz.swift  FlitzApp.swift  Info.plist  Localizable.xcstrings  String+ISO8601.swift  String+byCharWrapping.swift  String+paddedBase64String.swift  UIDevice+supportsHDR.swift  (+6 more)
scripts/: generate_license_notices.py  pyproject.toml
(+281 files in other folders)
